# my-cookiecutter-template

./: .gitignore  README.md
cookiecutter-python-app/: cookiecutter.json  create_project.sh
cookiecutter-python-app/{{cookiecutter.project_name}}/: .gitignore  README.md  env.example  pyproject.toml
cookiecutter-python-app/{{cookiecutter.project_name}}/frontend/: index.html  package.json
cookiecutter-python-app/{{cookiecutter.project_name}}/frontend/src/components/: Sidebar.tsx  TopBar.tsx
cookiecutter-python-app/{{cookiecutter.project_name}}/frontend/src/layouts/: MainLayout.tsx
cookiecutter-python-app/{{cookiecutter.project_name}}/frontend/src/pages/: Home.tsx  Settings.tsx
cookiecutter-python-app/{{cookiecutter.project_name}}/frontend/src/router/: index.tsx
cookiecutter-python-app/{{cookiecutter.project_name}}/scripts/: dev.sh  example_script.py  init_env.sh
cookiecutter-python-app/{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  main.py
cookiecutter-python-app/{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/api/: deps.py
cookiecutter-python-app/{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/config/: __init__.py  env_config.py  path_config.py
cookiecutter-python-app/{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/domain/: __init__.py
cookiecutter-python-app/{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/executor/: __init__.py
cookiecutter-python-app/{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/infra/: __init__.py
cookiecutter-python-app/{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/model/: sse_message.py
cookiecutter-python-app/{{cookiecutter.project_name}}/tests/: conftest.py  test_main.py
cookiecutter-tauri-sveltekit/{{cookiecutter.project_name}}/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
cookiecutter-tauri-sveltekit/{{cookiecutter.project_name}}/src-tauri/capabilities/: default.json  fs.json  python.json  tray.json  updater.json
cookiecutter-tauri-sveltekit/{{cookiecutter.project_name}}/src-tauri/icons/: .gitkeep
cookiecutter-tauri-sveltekit/{{cookiecutter.project_name}}/src-tauri/src/: lib.rs  main.rs  tray.rs
cookiecutter-tauri-sveltekit/{{cookiecutter.project_name}}/src-tauri/src-python/: main.py
(+90 files in other folders)
